:bug: fix spell icon not aligning to button on ios

--- a/css/spell-interface.css
+++ b/css/spell-interface.css
@@ -7,6 +7,11 @@ button:disabled {
   pointer-events: none;
 }
 
+.no-mana {
+  filter: grayscale(50%) opacity(35%) !important;
+  pointer-events: none;
+}
+
 .ability-interface > button {
   border: none;
   /* box-shadow:inset 0 -0.6em 0 -0.35em rgba(0,0,0,0.10); */
@@ -95,6 +100,9 @@ button:disabled {
   font-size: 1em;
   padding-top: 0px;
   padding-bottom: 0px;
+  /* Fixes iOS icon problem */
+  display: flex;
+  justify-content: space-around;
 }
 
 .spell-dragon-breath {
